# TopoMatch

./: AUTHORS  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  tm_config.h  tm_config.h.in
doc/: topomatch_doc.txt
examples/: Makefile.in  test_tm.pl
examples/topologies/: sub_fugaku.tgt
src/: Makefile.am  Makefile.in
src/libtopomatch/: Makefile.am  Makefile.in  k-partitioning.c  tm_bucket.c  tm_bucket.h  tm_kpartitioning.c  tm_kpartitioning.h  tm_mapping.c  tm_mapping.h  tm_scotch.c  tm_scotch.h  tm_solution.c  tm_solution.h  tm_thread_pool.c  tm_topology.c  tm_topology.h  tm_tree.c  tm_tree.h  tm_verbose.c  tm_verbose.h  topomatch.h
src/topomatch/: Makefile.am  Makefile.in  mapping.c
